Removed unused frontend and backend application code to improve maintainability.

--- a/data-plane/src/main/resources/application.properties
+++ b/data-plane/src/main/resources/application.properties
@@ -1,8 +1,29 @@
-quarkus.http.port=8081
+# Quarkus Configuration
 quarkus.application.name=data-plane
+quarkus.http.port=8081
 
-# Camel
+# Camel Configuration
 camel.context.name=data-plane-context
+camel.context.auto-startup=true
+camel.main.name=DataPlane
 
-# Control-Plane 연결 설정
+# Camel Management (for Jolokia)
+camel.main.jmx-enabled=true
+camel.main.jmx-management-statistics-level=Extended
+
+# Health Check
+quarkus.smallrye-health.root-path=/health
+
+# Logging
+quarkus.log.level=INFO
+quarkus.log.category."com.example.dp".level=DEBUG
+quarkus.log.category."org.apache.camel".level=INFO
+
+# CORS Configuration (for Control-Plane)
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:8080,http://localhost:5173
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
+
+# Control-Plane URL
 control-plane.url=http://localhost:8080
