--- a/control-plane/backend/src/main/resources/application.yml
+++ b/control-plane/backend/src/main/resources/application.yml
@@ -3,21 +3,47 @@ server:
 
 spring:
   application:
-    name: control-plane
+    name: control-plane-backend
+
+  # H2 Database Configuration (in-memory for development)
   datasource:
-    url: jdbc:h2:mem:cpdb
+    url: jdbc:h2:mem:controlplanedb
     driver-class-name: org.h2.Driver
     username: sa
     password:
+
+  # H2 Console (for development)
   h2:
     console:
       enabled: true
       path: /h2-console
+
+  # JPA Configuration
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-    show-sql: false
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
 
-# Data-Plane 연결 설정
+  # Jackson Configuration
+  jackson:
+    default-property-inclusion: non_null
+    serialization:
+      write-dates-as-timestamps: false
+
+# Logging Configuration
+logging:
+  level:
+    com.example.cp: DEBUG
+    org.springframework.web: INFO
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+# Data-Plane Configuration (for future use)
 data-plane:
-  url: http://localhost:8081
+  default-url: http://localhost:8081
+  timeout: 5000
