--- a/control-plane/frontend/package.json
+++ b/control-plane/frontend/package.json
@@ -9,18 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xyflow/react": "^12.4.0",
-    "axios": "^1.7.9",
-    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "@xyflow/react": "^12.3.5",
+    "antd": "^5.22.5",
+    "axios": "^1.7.9",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "~5.6.3",
-    "vite": "^5.4.11"
+    "typescript": "^5.7.2",
+    "vite": "^5.4.14"
   }
 }
