Refactored frontend and backend code to improve maintainability and usability.

--- a/data-plane/src/main/resources/application.properties
+++ b/data-plane/src/main/resources/application.properties
@@ -27,3 +27,6 @@ quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
 
 # Control-Plane URL
 control-plane.url=http://localhost:8080
+
+# Dev Services 비활성화 (Docker 없는 환경)
+quarkus.kafka.devservices.enabled=false
